--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,11 +6,11 @@ jvm = "17"
 agp = "8.5.1"
 
 room = "2.6.1"
-media3 = "1.3.1"
+media3 = "1.4.0"
 ktor = "2.3.12"
 detekt = "1.23.6"
 workmanager = "2.9.0"
-credentials = "1.3.0-beta01"
+credentials = "1.3.0-rc01"
 
 [plugins]
 android_application = { id = "com.android.application", version.ref = "agp" }
@@ -39,7 +39,7 @@ compose_ui_fonts = { module = "androidx.compose.ui:ui-text-google-fonts" }
 compose_ripple = { module = "androidx.compose.material:material-ripple" }
 compose_material3 = { module = "androidx.compose.material3:material3", version = "1.2.1" }
 
-compose_activity = { module = "androidx.activity:activity-compose", version = "1.9.0" }
+compose_activity = { module = "androidx.activity:activity-compose", version = "1.9.1" }
 compose_shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version = "1.3.0" }
 compose_coil = { module = "io.coil-kt:coil-compose", version = "2.6.0" }
 compose_lottie = { module = "com.airbnb.android:lottie-compose", version = "6.4.1" }
